Step4~5: 주문 및 환율 적용 (#25)
* refactor: 예외 핸들러 Logger 추가

* refactor: 와일드 카드 import 제거

* refactor: ImageStoreType 클래스 제거

* refactor: Money 클래스 패키지 위치 변경

* feat: Money 클래스 더하기, 곱하기 메서드 추가

* feat: 주문 기능 관련 도메인(Order, OrderItem, OrderItems) 추가 및 테스트

* refactor: Order 테이블 데이터베이스 예약어 안쓰도록 Orders로 이름 변경

* fix: CartItemRepository 쿼리 이슈 수정

* refactor: OrderItem Image 필드 추가

* test: test_schema Order 관련 테이블 생성 쿼리 추가

* refactor: CartItem getQuantity 메서드 Quantity 객체 리턴하도록 수정

* feat: findAllDtoByCartItemIds 쿼리 추가 및 테스트

* refactor: Quantity equals&hashCode 오버라이드

* feat: OrderRepository 쿼리 생성 및 테스트

* feat: Order 엔티티 OrderItem 넣는 메서드 추가

* refactor: eol 이슈 해결

* feat: OrderService addOrder 메서드 구현 및 테스트

* feat: OrderService getOrderDetail 메서드 구현

* feat: OrderService getOrders 메서드 구현

* feat: OrderService addOrder 메서드 장바구니 상품이 없는 경우 예외 로직 추가

* refactor: 미션 요구 사항에 맞춰 프론트 코드 수정

* test: OrderServiceTest 주문 상세 조회 예외 상황 테스트 추가

* feat: OrderController 구현 및 테스트

* feat: CurrencyProvider 구현 및 빈 등록

* feat: Order 엔티티 환율 필드 추가

* feat: OrderService 환율 정책 적용 및 테스트

* feat: 5단계 요구사항에 맞춰 html 수정

* test: 외부 API 테스트 환경에 맞춰 가짜 객체 생성 및 주입

* refactor: OrderItem 생성자에서 Order 파라미터 제거

* refactor: 코드 포매팅

* test: ExchangeRate 생성 테스트 추가

* refactor: url에 맞춰 프론트 코드 수정

* docs: README 요구사항 반영

* fix: 외부 api key 삭제

* refactor: API 스펙에 맞춰 수정

* refactor: BigDecimal 응답 값 타입 String으로 변경

* refactor: CurrencyProvider 환율 객체 리턴하도록 리턴 타입 수정

* refactor: CurrencyProvider 상수 분리

* refactor: Currency, ExchangeRate 혼용되는 단어 ExchangeRate로 통일

* refactor: 예외 로그 더 명확하게 수정

* refactor: OrderService addOrder 메서드 분리

* refactor: 외부 API url 설정 파일로 분리

* refactor: 외부 설정 파일 이름 더 명확하게 수정

* refactor: ExchangeRateProvider 인터페이스 메서드 명 수정

* refactor: 예외 로그 info에서 error로 수정

* refactor: 환율 관련 클래스 패키지 위치 수정

* refactor: UsdKrwExchangeRateProvider 원하는 예외 메시지 던질 수 있게 수정

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -22,14 +22,16 @@
     <div class="cart-list">
     </div>
 <!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
-<!--    <div class="flex justify-between items-center mt-30">-->
-<!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
-<!--    </div>-->
+    <div class="flex justify-between items-center mt-30">
+      <button class="primary-button flex-center jiwon">주문하기</button>
+    </div>
   </section>
 </div>
 <script th:src="@{/js/cart.js}"></script>
 <script th:src="@{/js/order.js}"></script>
 <script>
+  const selectedCartItemIds = [];
+
     document.addEventListener("DOMContentLoaded", function () {
         const credentials = sessionStorage.getItem('accessToken');
         if (!credentials) {
@@ -39,7 +41,7 @@
         }
 
         // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('/cart', {
+        fetch('/api/carts', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -50,6 +52,7 @@
         }).then((data) => {
             let element = '<hr class="divide-line-gray mt-10" />';
             data.cartItemResponses.forEach(cartItem => {
+              selectedCartItemIds.push(cartItem.id);
                 element += `
                     <div class="cart-container">
                       <div class="flex gap-15 mt-10">
@@ -75,9 +78,16 @@
             });
 
             document.querySelector('.cart-list').innerHTML = element;
+
+            let btn = document.querySelector(".jiwon");
+            btn.addEventListener("click", () => {
+              console.log(selectedCartItemIds)
+              requestOrder(selectedCartItemIds)
+            })
         }).catch((error) => {
             console.error(error);
         });
+
 
     });
 </script>
