refactor: URL을 케밥 케이스로 변경

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -37,7 +37,7 @@
       return;
     }
 
-    fetch('/api/cartProduct', {
+    fetch('/api/cart-product', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
