--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -39,7 +39,7 @@
         }
 
         // TODO: [3단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('/carts', {
+        fetch('/api/carts', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
