Step4, Step5: 주문, 주문(환율적용) (#30)
* docs: Step 4 요구사항 작성

* feat: 주문, 주문 상품 관련 스키마 작성

* feat: 주문 관련 예외 처리 추가

* feat: 주문 기능 구현

* refactor: cart item API 경로 수정

* refactor: 사용하지 않는 메서드 삭제

* refactor: 원시값 포장을 반환하도록 수정

* refactor: 페이지 경로 수정

* refactor: cart-items API 수정으로 인한 페이지 수정

* feat: 주문 관련 페이지 연동

- 주문 페이지 연동
- 사용자 별 주문 목록 확인 페이지 연동
- 주문 상세 정보 페이지 연동

* refactor: Page 관련 Controller와 API Controller 분리

- api 관련 경로 수정

* refactor: API 예외 핸들링 추가

* docs: Step 5 요구사항 작성

* feat: 주문 시 환율 저장하도록 스키마 작성

* feat: 외부 API를 활용해서 환율 저장 기능 구현

* feat: 주문 상세 페이지에 변환된 금액이 보이도록 변경

* feat: 테스트와 실행 환경 분리

* feat: 주문 상세 페이지에서 환율도 같이 보여주도록 구현

* refactor: Exception 처리 관련 수정

* refactor: 외부 API 호출을 Service 계층에서 하도록 수정

* refactor: 외부 API 관련 리팩터링

- 예외 관련 처리 구체화
- 외부 API 설정 yml 파일로 이동

* test: 외부 API 호출 관련 테스트 추가

--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -12,8 +12,8 @@
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/cart" class="nav-button">장바구니</a>
-      <a href="/order-history" class="nav-button">주문목록</a>
+      <a href="/cart-items" class="nav-button">장바구니</a>
+      <a href="/orders" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
   </nav>
@@ -30,8 +30,7 @@
             return;
         }
 
-        // TODO: [4단계] 주문 목록 조회 스펙에 맞게 변경
-        fetch('', {
+        fetch('/api/orders', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -43,14 +42,14 @@
             let element = '';
             data.forEach(order => {
                 let itemElement = '';
-                order.items.forEach((item) => {
+                order.orderItems.forEach((item) => {
                     itemElement += `
                         <div class="order-list-item">
                           <div class="flex gap-15 mt-10">
-                            <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                            <img src=${item.image} class="w-144 h-144" /> <!-- 아이템 이미지 -->
                             <div class="flex-col gap-15">
-                              <span class="order-name"></span> <!-- 아이템 이름 -->
-                              <span class="order-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                              <span class="order-name">${item.name}</span> <!-- 아이템 이름 -->
+                              <span class="order-info">${item.price} 원 / 수량: ${item.quantity} 개</span> <!-- 아이템 가격 및 수량 -->
                             </div>
                           </div>
                         </div>
@@ -61,8 +60,8 @@
                 element += `
                     <div class="order-list">
                       <div class="order-list__header">
-                        <span>주문 번호: </span> <!-- 주문 번호 -->
-                        <a href="">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
+                        <span>주문 번호: ${order.orderId}</span> <!-- 주문 번호 -->
+                        <a href="/orders/${order.orderId}">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
                       </div>
                       ${itemElement}
                     </div>
