--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,8 +12,8 @@
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/cart" class="nav-button">장바구니</a>
-      <a href="/order-history" class="nav-button">주문목록</a>
+      <a href="/cart-items" class="nav-button">장바구니</a>
+      <a href="/orders" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
   </nav>
@@ -21,10 +21,9 @@
   <section class="cart-section">
     <div class="cart-list">
     </div>
-    <!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
-    <!--    <div class="flex justify-between items-center mt-30">-->
-    <!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
-    <!--    </div>-->
+    <div class="flex justify-between items-center mt-30">
+      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>
+    </div>
   </section>
 </div>
 <script th:src="@{/js/cart.js}"></script>
@@ -38,8 +37,7 @@
             return;
         }
 
-        // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('/cart-items', {
+        fetch('/api/cart-items', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
