--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -12,8 +12,8 @@
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/cart" class="nav-button">장바구니</a>
-      <a href="/order-history" class="nav-button">주문목록</a>
+      <a href="/cart-items" class="nav-button">장바구니</a>
+      <a href="/orders" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
   </nav>
@@ -34,6 +34,10 @@
           <div class="flex justify-between p-20 mt-20">
             <span class="highlight-text">총 결제금액</span>
             <span class="highlight-text order-total-price"></span>
+            <br>
+            <span class="order-total-converted-price"></span>
+            <br>
+            <span class="exchange-rate"></span>
           </div>
         </div>
       </section>
@@ -49,10 +53,9 @@
             return;
         }
 
-        const orderId = /*[[${orderId}]]*/ '';
+        const orderId = [[${orderId}]];
 
-        // TODO: [4단계] 주문 상세 조회 스펙에 맞게 변경
-        fetch('', {
+        fetch('/api/orders/' + orderId, {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -62,14 +65,14 @@
             return response.json();
         }).then((data) => {
             let element = '<hr class="divide-line-gray mt-10" />';
-            data.items.forEach(orderItem => {
+            data.orderItems.forEach(orderItem => {
                 element += `
                     <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                        <img src="${orderItem.image}" class="w-144 h-144" /> <!-- 아이템 이미지 -->
                         <div class="flex-col gap-15">
-                          <span class="cart-name"></span> <!-- 아이템 이름 -->
-                          <span class="cart-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                          <span class="cart-name">${orderItem.name}</span> <!-- 아이템 이름 -->
+                          <span class="cart-info">${orderItem.price} 원 / 수량: ${orderItem.quantity} 개</span> <!-- 아이템 가격 및 수량 -->
                         </div>
                       </div>
                     </div>
@@ -78,7 +81,12 @@
             });
 
             document.querySelector('.order-item-list').innerHTML = element;
-            document.querySelector('.order-right-section .order-total-price').innerText = ` 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector(
+                    '.order-right-section .order-total-price').innerText = `${data.totalPrice} 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector(
+                    '.order-right-section .order-total-converted-price').innerText = `${data.convertedTotalPrice} 달러`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector(
+                    '.order-right-section .exchange-rate').innerText = `환율 ${data.exchangeRate} 원/달러`; <!-- 아이템 가격 및 수량 -->
         }).catch((error) => {
             console.error(error);
         });
