Step4, 5: 주문 및 환율 기능 구현 (#20)
* docs: Step4 요구사항 작성

* refactor: 필요없는 클래스 삭제

* refactor: 페이지 사이즈 추가

* refactor: RequestArgumentValidator 추가하여 Spring Assert 대체

* docs: 문서 API 명세 구체화

* test: 주문 요청 인수테스트 작성

* feat: 주문 및 주문 아이템 엔티티 생성

* feat: 주문 관련 레포지토리 및 schema.sql 생성

* feat: sql 예약어 `order` 대신 `orders` 으로 대체

* feat: 유저 관련이 아닌 불필요한 equals hashcode 삭제 및 Password equals 추가

* feat: 장바구니 객체 추가 및 테스트

* feat: 주문 서비스 - 주문 생성 메소드 테스트 및 구현

* feat: 주문 서비스 - 주문 상세 정보 메소드 테스트 및 구현

* feat: 주문 서비스 - 주문 전체 정보 메소드 테스트 및 구현

* feat: 주문 페이지 연동

* refactor: 주문 리스트 역순으로 정렬

* feat: 주문 API 컨트롤러 추가

* chore: 서비스 테스트 이름 변경

* test: 인수테스트 추가

* docs: Step4 구현사항 적용

* refactor: 서비스 메소드 정리

* refactor: `@OneToMany`와 `@EntityGraph`를 활용하여 1+N 리팩토링

* refactor: cart to order를 서비스에서 도메인으로 수정

* refactor: request dto 문자열 상수화

* chore: 안쓰이는 로거 제거

* test: 외부 api 학습테스트

* feat: WebClientConfiguration 추가 및 설정 변경

* docs: Step5 요구사항 추가

* feat: 환율 도메인 `Ratio` 추가

* refactor: 외부 api 제한을 대신하는 mocksever 추가

* feat: 환율 관련 외부 api 호출 기능 추가

* feat: 주문에 환율 추가

* feat: 주문에 생성 시각 추가

* feat: 환율 페이지 연동

* docs: 스크린샷 추가

* chore: 컨벤션에 맞춰 수정

* refactor: api 학습 테스트 역할 명시

* refactor: 에러 메세지 수정

* feat: 환율 dto 생성

* fix: jackson을 위한 생성자 생성

* refactor: 외부 api와 트랜잭션 분리

* refactor: private 메소드 역할 분리

* refactor: OrderCreator 테스트 추가 및 메소드명 변경

* refactor: 중복되는 페이지 관련 코드 PageUtil 로 분리

* refactor: PageUtil을 ShoppingPageRequest를 통해 대체

* refactor: FetchType.EAGER -> LAZY

* refactor: validate 이름 변경

* refactor: 불필요한 개행 inline으로 변경

* refactor: VO equals hashcode 추가

* refactor: component -> sevice

* refactor: entity id 기준 equals hashcode 생성

* refactor: test 프로필 설정 및 외부 통신에 적용

* refactor: 스프링부트테스트에 test 프로필 설정

--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -32,8 +32,16 @@
         <hr class="divide-line-thin"/>
         <div class="order-right-section__bottom">
           <div class="flex justify-between p-20 mt-20">
-            <span class="highlight-text">총 결제금액</span>
-            <span class="highlight-text order-total-price"></span>
+            <span class="highlight-text">총 결제금액(₩)</span>
+            <span class="highlight-text order-total-price" id="price-korea"></span>
+          </div>
+          <div class="flex justify-between p-20 mt-20">
+            <span class="highlight-text">총 결제금액($)</span>
+            <span class="highlight-text order-total-price" id="price-usa"></span>
+          </div>
+          <div class="flex justify-between p-20 mt-20">
+            <span class="">환율</span>
+            <span class="order-total-price" id="price-ratio"></span>
           </div>
         </div>
       </section>
@@ -49,10 +57,10 @@
       return;
     }
 
-    const orderId = /*[[${orderId}]]*/ '';
+    const orderId = [[${orderId}]];
+    console.log(orderId);
 
-    // TODO: [4단계] 주문 상세 조회 스펙에 맞게 변경
-    fetch('', {
+    fetch('/orders/' + orderId, {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
@@ -61,15 +69,16 @@
     }).then((response) => {
       return response.json();
     }).then((data) => {
+      console.log(data);
       let element = '<hr class="divide-line-gray mt-10" />';
-      data.items.forEach(orderItem => {
+      data.orderItems.forEach(orderItem => {
         element += `
                     <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                        <img class="w-144 h-144" src="${orderItem.imageUrl}"/> <!-- 아이템 이미지 -->
                         <div class="flex-col gap-15">
-                          <span class="cart-name"></span> <!-- 아이템 이름 -->
-                          <span class="cart-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                          <span class="cart-name">${orderItem.name}</span> <!-- 아이템 이름 -->
+                          <span class="cart-info">${orderItem.price}원 / 수량: ${orderItem.quantity}개</span> <!-- 아이템 가격 및 수량 -->
                         </div>
                       </div>
                     </div>
@@ -78,7 +87,12 @@
       });
 
       document.querySelector('.order-item-list').innerHTML = element;
-      document.querySelector('.order-right-section .order-total-price').innerText = ` 원`; <!-- 아이템 가격 및 수량 -->
+      document.querySelector('#price-korea').innerText = ` ${data.totalPrice}원`;
+      document.querySelector('#price-usa').innerText = `$ ${(data.totalPrice / data.ratio).toFixed(
+          2)}`;
+      document.querySelector(
+          '#price-ratio').innerHTML = `${(data.ratio).toFixed(2)} 원/달러
+                  <br> (${data.createdDate} 기준)`;
     }).catch((error) => {
       console.error(error);
     });
