--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -12,7 +12,7 @@
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/cart"  class="nav-button">장바구니</a>
+      <a href="/view/cart"  class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
@@ -31,7 +31,7 @@
         }
 
         // TODO: [4단계] 주문 목록 조회 스펙에 맞게 변경
-        fetch('', {
+        fetch('api/orders', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -43,26 +43,27 @@
             let element = '';
             data.forEach(order => {
                 let itemElement = '';
-                order.items.forEach((item) => {
+                order.orderItems.forEach((item) => {
+                  let orderItemDollar = (item.price / order.exchangeRate).toFixed(2);
                     itemElement += `
                         <div class="order-list-item">
                           <div class="flex gap-15 mt-10">
-                            <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                            <img class="w-144 h-144" src="${item.imageUrl}" /> <!-- 아이템 이미지 -->
                             <div class="flex-col gap-15">
-                              <span class="order-name"></span> <!-- 아이템 이름 -->
-                              <span class="order-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                              <span class="order-name">${item.name}</span> <!-- 아이템 이름 -->
+                              <span class="order-info">${item.price} 원 (${orderItemDollar} $) / 수량: ${item.quantity}개</span> <!-- 아이템 가격 및 수량 -->
                             </div>
                           </div>
                         </div>
 
                     `;
                 });
-
+                console.log(itemElement);
                 element += `
                     <div class="order-list">
                       <div class="order-list__header">
-                        <span>주문 번호: </span> <!-- 주문 번호 -->
-                        <a href="">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
+                        <span>주문 번호: ${order.id}</span> <!-- 주문 번호 -->
+                        <a href="/orders/${order.id}">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
                       </div>
                       ${itemElement}
                     </div>
