Step4, 5: 주문 및 환율 적용 구현 (#24)
* docs: 주문 관련 요구사항 추가

* feat: OrderItem 엔티티 작성

* feat: Money 클래스 작성

* feat: Order 클래스 작성

* feat: OrderRepository 작성

* feat: OrderItemRepository 작성

* feat: 엔티티 상수, 메서드 추가

* feat: 주문 기능 구현

* fix: 오류 데이터 삭제

* refactor: 메서드명 변경

* refactor: 미사용 생성자 삭제

* fix: 로직 추가

* feat: 메서드 추가

* feat: 주문 상세 조회 구현

* feat: 주문 상세 페이지 연동

* feat: 주문 목록 조회 기능 구현

* refactor: DTO 이름 변경

* test: 테스트 변경

* refactor: URI 변경

* docs: 리드미 API 추가

* docs: 리드미 요구사항 작성

* feat: MoneyType 작성

* feat: ForeignCurrency 작성

* feat: ExchangeRate 작성

* feat: ExchangeRateProvider 작성

* feat: DefaultExchangeRateProvider 작성

* feat: OrderHistoryResponse 작성

* feat: 달러 변환 구현

* fix: 검증 조건 추가

* refactor: 의존성을 주입받도록 변경

* chore: 설정 추가

* refactor: mock 사용하지 않도록 변경

* fix: 검증 로직 추가

* test: 테스트 추가

* fix: 주문 시점의 환율 정보를 저장하도록 변경

* test: 테스트 추가

* test: 테스트 추가

* refactor: DollarMoney 필드 타입 변경

* refactor: 뷰 변경

* refactor: DTO 클래스명 변경

* refactor: PK 생성 전략 변경

* refactor: RestTemplate 설정 분리

* refactor: Money -> WonMoney 클래스명 변경

* refactor: 주문 생성 로직 변경

* refactor: 검증 로직 변경

* refactor: 패키지 구조 변경

* refactor: 캐시 사용 및 구조 변경

* chore: 설정 파일 구조 변경 및 profile 추가

* test: 서비스 통합 테스트로 변경

* refactor: 패키지 이동

--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -35,6 +35,14 @@
             <span class="highlight-text">총 결제금액</span>
             <span class="highlight-text order-total-price"></span>
           </div>
+          <div class="flex justify-between p-20 mt-20">
+            <span class="highlight-text">환산 금액</span>
+            <span class="highlight-text order-usd-total-price"></span>
+          </div>
+          <div class="flex justify-between p-20 mt-20">
+            <span class="highlight-text">적용 환율</span>
+            <span class="highlight-text usd-exchange-rate"></span>
+          </div>
         </div>
       </section>
     </div>
@@ -49,10 +57,9 @@
       return;
     }
 
-    const orderId = /*[[${orderId}]]*/ '';
+    const orderId = [[${orderId}]];
 
-    // TODO: [4단계] 주문 상세 조회 스펙에 맞게 변경
-    fetch('', {
+    fetch(`/api/v1/order/${orderId}`, {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
@@ -62,14 +69,15 @@
       return response.json();
     }).then((data) => {
       let element = '<hr class="divide-line-gray mt-10" />';
-      data.items.forEach(orderItem => {
+      data.orderItems.forEach(orderItem => {
+        console.log(orderItem.imageFileName);
         element += `
                     <div class="shopping-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144" /> <!-- 상품 이미지 -->
+                        <img class="w-144 h-144" src="/assets/${orderItem.imageFileName}"/> <!-- 상품 이미지 -->
                         <div class="flex-col gap-15">
-                          <span class="shopping-name"></span> <!-- 상품 이름 -->
-                          <span class="shopping-info">원 / 수량: 개</span> <!-- 상품 가격 및 수량 -->
+                          <span class="shopping-name">${orderItem.productName}</span> <!-- 상품 이름 -->
+                          <span class="shopping-info">${orderItem.price}원 / 수량: ${orderItem.quantity}개</span> <!-- 상품 가격 및 수량 -->
                         </div>
                       </div>
                     </div>
@@ -78,7 +86,14 @@
       });
 
       document.querySelector('.order-item-list').innerHTML = element;
-      document.querySelector('.order-right-section .order-total-price').innerText = ` 원`; <!-- 상품 가격 및 수량 -->
+      document.querySelector(
+          '.order-right-section .order-total-price').innerText = `${data.totalPrice} 원`; <!-- 상품 가격 및 수량 -->
+      document.querySelector(
+          '.order-right-section .order-usd-total-price').innerText = `${data.dollarTotalPrice.toFixed(
+          2)} 달러`;
+      document.querySelector(
+          '.order-right-section .usd-exchange-rate').innerText = `${data.exchangeRate.toFixed(
+          2)} 원/달러`;
     }).catch((error) => {
       console.error(error);
     });
