--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -21,10 +21,9 @@
   <section class="cart-section">
     <div class="cart-list">
     </div>
-<!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
-<!--    <div class="flex justify-between items-center mt-30">-->
-<!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
-<!--    </div>-->
+    <div class="flex justify-between items-center mt-30">
+      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>
+    </div>
   </section>
 </div>
 <script th:src="@{/js/cart.js}"></script>
@@ -39,7 +38,7 @@
         }
 
         // TODO: [3단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('/cart/products', {
+        fetch('/api/cart', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
