--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8"/>
-  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link rel="stylesheet" th:href="@{/css/index.css}">
-  <title>Shopping</title>
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <title>Shopping</title>
 </head>
 <body>
 <div class="root">
-  <nav class="nav flex justify-end">
-    <div class="flex-center gap-15">
-      <a class="nav-button" href="/">상품</a>
-      <a class="nav-button" href="/cart">장바구니</a>
-      <a class="nav-button" href="/order-history">주문목록</a>
-      <a class="nav-button" href="/login">로그인</a>
-    </div>
-  </nav>
+    <nav class="nav flex justify-end">
+        <div class="flex-center gap-15">
+            <a class="nav-button" href="/">상품</a>
+            <a class="nav-button" href="/cart">장바구니</a>
+            <a class="nav-button" href="/order-history">주문목록</a>
+            <a class="nav-button" href="/login">로그인</a>
+        </div>
+    </nav>
 
-  <section class="order-section">
-    <div class="flex">
-      <section class="order-left-section">
-        <h3 class="order-title" th:text="'주문 번호: ' + ${orderId}"></h3>
-        <div class="order-item-list">
+    <section class="order-section">
+        <div class="flex">
+            <section class="order-left-section">
+                <h3 class="order-title" th:text="'주문 번호: ' + ${orderId}"></h3>
+                <div class="order-item-list">
+                </div>
+            </section>
+            <section class="order-right-section">
+                <div class="order-right-section__top">
+                    <h3 class="order-title">결제금액</h3>
+                </div>
+                <hr class="divide-line-thin"/>
+                <div class="order-right-section__bottom">
+                    <div class="flex justify-between p-20 mt-20">
+                        <span class="highlight-text">총 결제금액</span>
+                        <span class="highlight-text order-total-price"></span>
+                    </div>
+                    <div class="flex justify-between p-20 mt-20">
+                        <span class="highlight-text">USD</span>
+                        <span class="highlight-text order-usd"></span>
+                    </div>
+                </div>
+            </section>
         </div>
-      </section>
-      <section class="order-right-section">
-        <div class="order-right-section__top">
-          <h3 class="order-title">결제금액</h3>
-        </div>
-        <hr class="divide-line-thin"/>
-        <div class="order-right-section__bottom">
-          <div class="flex justify-between p-20 mt-20">
-            <span class="highlight-text">총 결제금액</span>
-            <span class="highlight-text order-total-price"></span>
-          </div>
-        </div>
-      </section>
-    </div>
-  </section>
+    </section>
 </div>
 <script th:inline="javascript">
     document.addEventListener("DOMContentLoaded", function () {
@@ -49,10 +53,10 @@
             return;
         }
 
-        const orderId = /*[[${orderId}]]*/ '';
+        const orderId = [[${orderId}]];
 
         // TODO: [4단계] 주문 상세 조회 스펙에 맞게 변경
-        fetch('', {
+        fetch('/api/orders/' + orderId, {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -66,10 +70,10 @@
                 element += `
                     <div class="shopping-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                        <img class="w-144 h-144" src="${orderItem.imageUrl}" />
                         <div class="flex-col gap-15">
-                          <span class="shopping-name"></span> <!-- 아이템 이름 -->
-                          <span class="shopping-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                          <span class="shopping-name">${orderItem.name}</span>
+                          <span class="shopping-info">${orderItem.price}원 / 수량: ${orderItem.count}개</span>
                         </div>
                       </div>
                     </div>
@@ -78,7 +82,8 @@
             });
 
             document.querySelector('.order-item-list').innerHTML = element;
-            document.querySelector('.order-right-section .order-total-price').innerText = ` 원`; <!-- 아이템 가격 및 수량 -->
+            document.querySelector('.order-right-section .order-total-price').innerText = data.totalPrice + ` 원`;
+            document.querySelector('.order-right-section .order-usd').innerText = `$ ` + data.usd;
         }).catch((error) => {
             console.error(error);
         });
